🩹 fix(guard): ToolDenialLog.topDenials 有序快照被 Map.copyOf 破坏——排序逻辑正确（count 降序 + (role->tool) 字典序 tie-break 落 LinkedHashMap）但返回前 Map.copyOf 按 ImmutableCollections 哈希布局重排，稳定性契约静默失效（3cb64152 引入；测试同年提交靠哈希巧合长期绿，JDK 升级 MapN 探测序变化确定性翻红）；改 Collections.unmodifiableMap 保序不变式——教训入档：有序快照禁用 Map.copyOf，有序契约必须走 unmodifiable 包装（resolve T1805, spec 1200 审计）